Fixed wrong alignment on radio buttons

--- a/samples/plain/index.css
+++ b/samples/plain/index.css
@@ -646,10 +646,12 @@ button#reset.hidden {
     user-select: none;
 }
 
-#matches-order .container {
+#matches-order .container,
+#details-types .container {
     font-size: 1em;
     padding-left: 20px;
     margin-left: 10px;
+    padding-top: 2px;
 }
 
 /* Hide the browser's default checkbox */
@@ -1055,7 +1057,7 @@ button#reset.hidden {
 }
 
 #matches-order .header {
-    margin-top: 10px;
+    margin-top: 11px;
     font-weight: 700;
 }
 
@@ -1314,6 +1316,7 @@ button#reset.hidden {
 
 #details-types {
     margin: 0.5em 0 0 -0.4em;
+    display: flex;
 }
 
 #details > h2 {
